--- a/hibernate_simple/hibernate.simple/pom.xml
+++ b/hibernate_simple/hibernate.simple/pom.xml
@@ -15,6 +15,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+	        <groupId>mysql</groupId>
+	        <artifactId>mysql-connector-java</artifactId>
+	        <version>5.1.28</version>
+	    </dependency>
 
     <dependency>
     	<groupId>org.hibernate</groupId>
